--- a/action.yaml
+++ b/action.yaml
@@ -25,7 +25,7 @@ runs:
         Invoke-WebRequest "https://www.autohotkey.com/download/ahk.zip" -OutFile "$cwd\autohotkey.zip";
         Expand-Archive -Path "$cwd\autohotkey.zip" -DestinationPath "$cwd\_autohotkey\" -Force;
         Remove-Item -Path "$cwd\autohotkey.zip" -Force
-        $Env:GITHUB_ENV = Write-Output ("$cwd\_autohotkey\;" + "$cwd\_autohotkey\Compiler");
+        Write-Output ("$cwd\_autohotkey\;" + "$cwd\_autohotkey\Compiler") | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
     - name: Run Ahk2Exe
       shell: pwsh
@@ -40,7 +40,7 @@ runs:
         if('${{inputs.icon}}' -ne ''){
           $params += '/icon "${{inputs.icon}}" '
         }
-        .\_autohotkey\Compiler\ahk2exe.exe /silent $params | Write-Output
+        ahk2exe.exe /silent $params | Write-Output
         
 branding:
   color: green
