--- a/action.yaml
+++ b/action.yaml
@@ -14,6 +14,10 @@ inputs:
     description: The icon of the executable file is specified
     required: false
     default: ''
+  base:
+    description: The base file to be used for Ahk2Exe
+    required: false
+    default: 'Unicode 32-bit'
 
 runs:
   using: composite
@@ -26,11 +30,12 @@ runs:
         Expand-Archive -Path "$cwd\autohotkey.zip" -DestinationPath "$cwd\_autohotkey\" -Force;
         Remove-Item -Path "$cwd\autohotkey.zip" -Force
         Write-Output ("$cwd\_autohotkey\;" + "$cwd\_autohotkey\Compiler") | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        Write-Output ("BaseFile=$cwd\_autohotkey\Compiler\${{inputs.base}}") | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
 
     - name: Run Ahk2Exe
       shell: pwsh
       run: |
-        $command = 'ahk2exe.exe /silent '
+        $command = 'ahk2exe.exe /silent verbose /base "$Env:BaseFile" '
         if('${{inputs.in}}' -ne ''){
           $command += '/in "${{inputs.in}}" '
         }
