--- a/action.yaml
+++ b/action.yaml
@@ -15,7 +15,7 @@ inputs:
     required: false
     default: ''
   base:
-    description: The base file to be used for Ahk2Exe
+    description: The name of the base file to be used for Ahk2Exe
     required: false
     default: 'Unicode 32-bit'
 
@@ -30,7 +30,7 @@ runs:
         Expand-Archive -Path "$cwd\autohotkey.zip" -DestinationPath "$cwd\_autohotkey\" -Force;
         Remove-Item -Path "$cwd\autohotkey.zip" -Force
         Write-Output ("$cwd\_autohotkey\;" + "$cwd\_autohotkey\Compiler") | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        Write-Output ("BaseFile=$cwd\_autohotkey\Compiler\${{inputs.base}}") | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+        Write-Output ("BaseFile=$cwd\_autohotkey\Compiler\${{inputs.base}}.bin") | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
 
     - name: Run Ahk2Exe
       shell: pwsh
