--- a/action.yaml
+++ b/action.yaml
@@ -17,7 +17,7 @@ inputs:
   base:
     description: The name of the base file to be used for Ahk2Exe
     required: false
-    default: 'Unicode 32-bit'
+    default: ''
 
 runs:
   using: composite
@@ -30,12 +30,16 @@ runs:
         Expand-Archive -Path "$cwd\autohotkey.zip" -DestinationPath "$cwd\_autohotkey\" -Force;
         Remove-Item -Path "$cwd\autohotkey.zip" -Force
         Write-Output ("$cwd\_autohotkey\;" + "$cwd\_autohotkey\Compiler") | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        Write-Output ("BaseFile=$cwd\_autohotkey\Compiler\${{inputs.base}}.bin") | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+        if('${{inputs.base}}' -ne ''){
+          Write-Output ("BaseFile=$cwd\_autohotkey\Compiler\${{inputs.base}}.bin") | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+        }else{
+          Copy-Item -Path "$cwd\_autohotkey\Compiler\Unicode 32-bit.bin" -Destination "$cwd\_autohotkey\Compiler\AutoHotkeySC.bin"
+        }
 
     - name: Run Ahk2Exe
       shell: pwsh
       run: |
-        $command = 'ahk2exe.exe /silent verbose /base "$Env:BaseFile" '
+        $command = 'ahk2exe.exe /silent verbose '
         if('${{inputs.in}}' -ne ''){
           $command += '/in "${{inputs.in}}" '
         }
@@ -44,6 +48,9 @@ runs:
         }
         if('${{inputs.icon}}' -ne ''){
           $command += '/icon "${{inputs.icon}}" '
+        }
+        if('${{inputs.base}}' -ne ''){
+          $command += '/base "$Env:BaseFile" '
         }
         $command += "| Write-Output"
         Invoke-Expression $command
